# image-compressor

./: .gitignore  Cargo.toml  readme.md
.cargo/: config
examples/node/: index.js  package.json
src/: lib.rs
