[package]
name = "image-compressor"
version = "0.1.0"
authors = ["Tomohide Takao <amakunai.dorayaki@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
oxipng = { git = "https://github.com/dorayakikun/oxipng", version = "2", features = [] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[features]
wasm_syscall = []